--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,10 @@
     "iron-selector": "PolymerElements/iron-selector#^1.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.0",
     "polymer": "Polymer/polymer#^1.6.0",
-    "polymerfire": "firebase/polymerfire#^0.9.7"
+    "polymerfire": "firebase/polymerfire#^0.9.7",
+    "paper-input": "PolymerElements/paper-input#^1.1.20",
+    "paper-button": "PolymerElements/paper-button#^1.0.13",
+    "iron-form": "^1.1.4"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
